--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
-  "scripts": {},
+  "name": "dodfetch",
+  "description": "Distributed Fetch Through Cloudflare Durable Objects",
+  "version": "0.0.2",
+  "main": "build/do.js",
+  "types": "build/do.d.ts",
+  "scripts": {
+    "build": "tsc"
+  },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241230.0"
   }
