--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
-  "include": ["**/*.ts"],
+  "include": ["do.ts"],
   "compilerOptions": {
     "resolveJsonModule": true,
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "lib": ["es2022", "DOM"],
     "strict": true,
+    "outDir": "build",
     "types": ["@cloudflare/workers-types/2023-07-01"],
-    "noEmit": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "declaration": true
